# cleancore-python-library

./: README.md  pyproject.toml  readme.md  setup.py  test.py
.github/workflows/: publish.yml
docs/: api.rst
docs/source/: conf.py  index.rst
src/cleancore/: __init__.py  audit.py  engine.py
src/cleancore.egg-info/: PKG-INFO
src/geomath_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mathnexus-/: PKG-INFO  SOURCES.txt  top_level.txt
